Prinzessin inklusive Bild implementiert

--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj
@@ -85,6 +85,7 @@
     <ClInclude Include="LevelSegment.h" />
     <ClInclude Include="Menue.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Princess.h" />
     <ClInclude Include="Resourcemanager.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Vektor.h" />
@@ -96,6 +97,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menue.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Princess.cpp" />
     <ClCompile Include="Resourcemanager.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="World.cpp" />
