--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClInclude Include="Princess.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Crazy_enemy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Verrückter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Timer.cpp">
@@ -72,6 +78,12 @@
       <Filter>Resource Files</Filter>
     </ClCompile>
     <ClCompile Include="Princess.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Crazy_enemy.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Verrückter.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
