KOllision fr den gegner richtig implementiert, sie ist nun unabhngig von seiner Startposition

--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj
@@ -42,8 +42,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\SDL\SDL-1.2.15\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\SDL\SDL-1.2.15\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\SDL\SDL-1.2.15\include;D:\SDL\SDL-1.2.15\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\SDL\SDL-1.2.15\lib\x86;D:\SDL\SDL-1.2.15\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
