Gegner sind jetzt in einem dynamischen Array gespeichert

--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj
@@ -95,6 +95,7 @@
     <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Agentmanager.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="LevelSegment.cpp" />
     <ClCompile Include="main.cpp" />
