--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
@@ -89,5 +89,8 @@
     <ClCompile Include="Main_Menue.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
+    <ClCompile Include="Agentmanager.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
