Entmuellisierung der World->render funktion, eine Singletonklasse fr das Overlay

--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="LevelSegment.h" />
     <ClInclude Include="MainMenue.h" />
     <ClInclude Include="Menue.h" />
+    <ClInclude Include="Overlay.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Princess.h" />
     <ClInclude Include="Resourcemanager.h" />
@@ -101,6 +102,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Main_Menue.cpp" />
     <ClCompile Include="Menue.cpp" />
+    <ClCompile Include="Overlay.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Princess.cpp" />
     <ClCompile Include="Resourcemanager.cpp" />
