--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="AgentManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Overlay.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Timer.cpp">
@@ -90,6 +93,9 @@
       <Filter>Resource Files</Filter>
     </ClCompile>
     <ClCompile Include="Agentmanager.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Overlay.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
