--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\Gegner">
+      <UniqueIdentifier>{a7f5d772-76ba-412f-b950-6d009165b0fb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Timer.h">
@@ -42,12 +45,6 @@
     <ClInclude Include="Enemy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Princess.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Verrückter.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="MainMenue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -61,6 +58,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Armor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Verrückter.h">
+      <Filter>Header Files\Gegner</Filter>
+    </ClInclude>
+    <ClInclude Include="FinalBoss.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -89,12 +92,6 @@
     <ClCompile Include="Enemy.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
-    <ClCompile Include="Princess.cpp">
-      <Filter>Resource Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Verrückter.cpp">
-      <Filter>Resource Files</Filter>
-    </ClCompile>
     <ClCompile Include="Main_Menue.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
@@ -108,6 +105,12 @@
       <Filter>Resource Files</Filter>
     </ClCompile>
     <ClCompile Include="Armor.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Verrückter.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FinalBoss.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
