Itemmanager vernnftig implementiert, wird auch nach erweterten Items noch funktionieren

--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj
@@ -84,6 +84,7 @@
     <ClInclude Include="Armor.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="globals.h" />
+    <ClInclude Include="ItemManager.h" />
     <ClInclude Include="LevelSegment.h" />
     <ClInclude Include="MainMenue.h" />
     <ClInclude Include="Menue.h" />
