--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj
@@ -98,6 +98,7 @@
     <ClInclude Include="Vektor.h" />
     <ClInclude Include="Verrückter.h" />
     <ClInclude Include="Weapon.h" />
+    <ClInclude Include="WeaponManager.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
