--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ GruppeB4/GruppeB4/Debug/**
 GruppeB4/Debug/**
 GruppeB4/GruppeB4/GruppeB4.sdf
 GruppeB4/GruppeB4/GruppeB4.v11.suo
+GruppeB4/GruppeB4/GruppeB4.opensdf
