--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj
@@ -103,7 +103,6 @@
     <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\Desktop\sicherheitskopie\12.6(2)\gruppeB4\GruppeB4\GruppeB4\WeaponManager.cpp" />
     <ClCompile Include="Agentmanager.cpp" />
     <ClCompile Include="Armor.cpp" />
     <ClCompile Include="Enemy.cpp" />
@@ -120,6 +119,7 @@
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Verrückter.cpp" />
     <ClCompile Include="Weapon.cpp" />
+    <ClCompile Include="WeaponManager.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
