--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
@@ -146,7 +146,7 @@
     <ClCompile Include="ItemManager.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Desktop\sicherheitskopie\12.6(2)\gruppeB4\GruppeB4\GruppeB4\WeaponManager.cpp">
+    <ClCompile Include="WeaponManager.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
