Der Pfleger funktioniert mit Spritze Level 1 komplett

--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
@@ -99,9 +99,6 @@
     <ClInclude Include="MoneyManager.h">
       <Filter>Header Files\Manager</Filter>
     </ClInclude>
-    <ClInclude Include="ArmorManager.h">
-      <Filter>Header Files\Manager</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Timer.cpp">
@@ -161,7 +158,7 @@
     <ClCompile Include="MoneyManager.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
-    <ClCompile Include="ArmorManager.cpp">
+    <ClCompile Include="Spritze.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
