--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj
@@ -59,7 +59,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL.lib;SDLmain.lib;SDL_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL.lib;SDLmain.lib;SDL_image.lib;SDL_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -82,7 +82,6 @@
   <ItemGroup>
     <ClInclude Include="AgentManager.h" />
     <ClInclude Include="Armor.h" />
-    <ClInclude Include="ArmorManager.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="globals.h" />
     <ClInclude Include="Item.h" />
@@ -108,7 +107,6 @@
   <ItemGroup>
     <ClCompile Include="Agentmanager.cpp" />
     <ClCompile Include="Armor.cpp" />
-    <ClCompile Include="ArmorManager.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="ItemManager.cpp" />
     <ClCompile Include="LevelSegment.cpp" />
@@ -121,6 +119,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="FinalBoss.cpp" />
     <ClCompile Include="Resourcemanager.cpp" />
+    <ClCompile Include="Spritze.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Verrückter.cpp" />
     <ClCompile Include="Weapon.cpp" />
