--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj
@@ -96,6 +96,7 @@
     <ClInclude Include="FinalBoss.h" />
     <ClInclude Include="RendableObject.h" />
     <ClInclude Include="Resourcemanager.h" />
+    <ClInclude Include="Shop.h" />
     <ClInclude Include="Spritze.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Vektor.h" />
@@ -119,6 +120,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="FinalBoss.cpp" />
     <ClCompile Include="Resourcemanager.cpp" />
+    <ClCompile Include="Shop.cpp" />
     <ClCompile Include="Spritze.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Verrückter.cpp" />
