NPC1 wird jetzt gerendert und shop abfrage noch ausstehend

--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj
@@ -90,6 +90,7 @@
     <ClInclude Include="MainMenue.h" />
     <ClInclude Include="Menue.h" />
     <ClInclude Include="MoneyManager.h" />
+    <ClInclude Include="NPC1.h" />
     <ClInclude Include="Overlay.h" />
     <ClInclude Include="Pfleger.h" />
     <ClInclude Include="Player.h" />
@@ -115,6 +116,7 @@
     <ClCompile Include="Main_Menue.cpp" />
     <ClCompile Include="Menue.cpp" />
     <ClCompile Include="MoneyManager.cpp" />
+    <ClCompile Include="NPC1.cpp" />
     <ClCompile Include="Overlay.cpp" />
     <ClCompile Include="Pfleger.cpp" />
     <ClCompile Include="Player.cpp" />
