--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="Shop.h">
       <Filter>Header Files\Manager</Filter>
     </ClInclude>
+    <ClInclude Include="NPC1.h">
+      <Filter>Header Files\Objekte</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Timer.cpp">
@@ -165,6 +168,9 @@
       <Filter>Resource Files</Filter>
     </ClCompile>
     <ClCompile Include="Shop.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NPC1.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
