--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj
@@ -91,6 +91,7 @@
     <ClInclude Include="Menue.h" />
     <ClInclude Include="MoneyManager.h" />
     <ClInclude Include="NPC1.h" />
+    <ClInclude Include="NPCManager.h" />
     <ClInclude Include="Overlay.h" />
     <ClInclude Include="Pfleger.h" />
     <ClInclude Include="Player.h" />
