--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClInclude Include="NPCManager.h">
       <Filter>Header Files\Manager</Filter>
     </ClInclude>
+    <ClInclude Include="ArmorManager.h">
+      <Filter>Header Files\Manager</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Timer.cpp">
@@ -174,6 +177,9 @@
       <Filter>Resource Files</Filter>
     </ClCompile>
     <ClCompile Include="NPC1.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ArmorManager.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
