--- a/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
+++ b/GruppeB4/GruppeB4/GruppeB4.vcxproj.filters
@@ -191,5 +191,8 @@
     <ClCompile Include="Skilltree.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
+    <ClCompile Include="EPManager.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
