Dicker resourcemanager fuer Leveleditor hinzugefuegt. Nagelneues Design mit krasser Map und epischem Fehlererkennungssystem. No way you gonna hit a mistake

--- a/LevelEditor/LevelEditor/LevelEditor/LevelEditor.vcxproj
+++ b/LevelEditor/LevelEditor/LevelEditor/LevelEditor.vcxproj
@@ -79,7 +79,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CBlock.cpp" />
+    <ClCompile Include="GameApplicationLayer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Resourcemanager.cpp" />
+    <ClCompile Include="World.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CBlock.h" />
+    <ClInclude Include="CollisiobalObject.h" />
+    <ClInclude Include="GameApplicationLayer.h" />
+    <ClInclude Include="Resourcemanager.h" />
+    <ClInclude Include="World.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
