--- a/LevelEditor/LevelEditor/LevelEditor/LevelEditor.vcxproj.filters
+++ b/LevelEditor/LevelEditor/LevelEditor/LevelEditor.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="Resourcemanager.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="CollisibalObjectManager.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
