Zahlreiche Klassen hinzugefgt zum LevelEditor, keine Oberflaechlichen Aenderungen

--- a/LevelEditor/LevelEditor/LevelEditor/LevelEditor.vcxproj
+++ b/LevelEditor/LevelEditor/LevelEditor/LevelEditor.vcxproj
@@ -82,6 +82,7 @@
     <ClCompile Include="CBlock.cpp" />
     <ClCompile Include="Eventhandler.cpp" />
     <ClCompile Include="GameApplicationLayer.cpp" />
+    <ClCompile Include="LevelEditor.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Resourcemanager.cpp" />
     <ClCompile Include="S_CollisibalObjectManager.cpp" />
@@ -91,9 +92,11 @@
     <ClInclude Include="CBlock.h" />
     <ClInclude Include="CollisibalObjectManager.h" />
     <ClInclude Include="CollisiobalObject.h" />
+    <ClInclude Include="Editor.h" />
     <ClInclude Include="EventHandler.h" />
     <ClInclude Include="GameApplicationLayer.h" />
     <ClInclude Include="globals.h" />
+    <ClInclude Include="LevelEditor.h" />
     <ClInclude Include="Resourcemanager.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="World.h" />
