--- a/LevelEditor/LevelEditor/LevelEditor/LevelEditor.vcxproj.filters
+++ b/LevelEditor/LevelEditor/LevelEditor/LevelEditor.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="LevelEditor.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="Overlay.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="World.h">
@@ -72,6 +75,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="Editor.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Overlay.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
