--- a/MultiplayerBeta1000BUMBUM/Multiplayer/Multiplayer.vcxproj
+++ b/MultiplayerBeta1000BUMBUM/Multiplayer/Multiplayer.vcxproj
@@ -79,21 +79,37 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ArmorManager.h" />
     <ClInclude Include="A_Animation.h" />
+    <ClInclude Include="EPManager.h" />
     <ClInclude Include="GameApplicationLayer.h" />
+    <ClInclude Include="globals.h" />
+    <ClInclude Include="Item.h" />
+    <ClInclude Include="ItemManager.h" />
+    <ClInclude Include="MoneyManager.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="S_EventHandler.h" />
     <ClInclude Include="S_ResourceManager.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Update.h" />
     <ClInclude Include="Vector2D.h" />
+    <ClInclude Include="Weapon.h" />
+    <ClInclude Include="WeaponManager.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ArmorManager.cpp" />
+    <ClCompile Include="EPManager.cpp" />
     <ClCompile Include="GameApplicationLayer.cpp" />
+    <ClCompile Include="ItemManager.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MoneyManager.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="S_Eventhandler.cpp" />
     <ClCompile Include="S_ResourceManager.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Update.cpp" />
+    <ClCompile Include="Weapon.cpp" />
+    <ClCompile Include="WeaponManager.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
